# porcupine

./: .gitignore  LICENSE  README.md  requirements.txt
app/: Dockerfile  agents.py  docker-compose.yml  main.py  pyproject.toml  schemas.py
app/db/: database.py  models.py
db/: docker-compose.yml
db/init-scripts/: seed-directory-tables.sh
frontend/: package-lock.json
frontend/.next/: app-build-manifest.json  build-manifest.json  fallback-build-manifest.json  postcss.js  prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: [root-of-the-server]__54ee5bd8._.js  [root-of-the-server]__54ee5bd8._.js.map  [root-of-the-server]__5db01bc4._.js  [root-of-the-server]__5db01bc4._.js.map  (+5 more)
frontend/src/app/: page.tsx
inkeep/my-agent-directory/: .gitignore  biome.json  package.json  pnpm-lock.yaml  turbo.json
inkeep/my-agent-directory/scripts/: dev-setup.js  setup.js
langgraph/: demo.py  mcp_client.py  repo_analysis.py
my-agent-directory/: .env.example  README.md  drizzle.config.ts
my-agent-directory/apps/manage-api/: package.json
my-agent-directory/apps/run-api/: package.json
my-agent-directory/apps/shared/: credential-stores.ts
my-agent-directory/scripts/: dev-setup.js  setup.js
my-agent-directory/src/default/: weather.graph.ts
(+180 files in other folders)
