[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langgraph-supervisor>=0.0.29",
    "langsmith>=0.4.27",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.43",
]
